# Scripts

./: .gitignore  README.md  TOTK_reshade.sh  auto_bitwig_audio.sh  azure-tts.sh  bitwig-auto-route.sh  bitwig-to-evo.sh  custom.sh  custom_script.sh  dictation.sh  kitty_font.sh  mixer.sh  mute.sh  open_dolphin.sh  open_kali.sh  open_website.sh  route_to_microphonhe.sh  route_to_screenshare.sh  sd-azure.sh  setup_audio.sh  text_to_speech.sh  toggle_terminal_code.sh  update-computer.sh
Chatbot/: explain_this.sh  responce.sh
Chatbot/ollama-websocket-server/: Cargo.toml
chatbot/: .directory  Cargo.toml  nohup.out
chatbot.old.2/: Cargo.toml
chatbot.old.2/src/: main.rs
chatbot.old/ollama-websocket-server/: package-lock.json  websocket_server.js
chatbot/src/: main.rs
chatbot/src/utils/: clipboard.rs  mod.rs  ollama.rs  speak.rs
dev/: test.sh
hyprland/: focus_else_open.sh  hue-wallpaper.sh  ln64-zoom.sh  open_website.sh  random-wallpaper.sh
hyprland/utility/: dictation.sh  zoom.sh
hyprland/wallpaper/: random-video-wallpaper.sh  switch-random-video-wallpaper.sh  switchcolor-screenshot.sh  switchwall-youtube.sh  wallpaper-invert.sh  youtube-video-wallpaper.sh
