[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
ollama-rs = { version = "0.1.6", features = ["stream"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }
tungstenite = "0.21.0"

